[package]
name = "watering-port"
version = "0.1.0"
authors = ["w1jtoo <wanadooht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
clap = "3.0.0-beta.1"
tokio = { version = "0.2", features = ["full"] }

[dependencies.async-std]
features = ["unstable"]

[dependencies.futures]
